треба реалізувати вивід букви м

--- a/hw/calculator/index.html
+++ b/hw/calculator/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="box">
     <div class="display">
-      <input type="text" readonly size="18">
+      <input class="inputDisplay" type="text" readonly size="18">
     </div>
     <div class="keys">
       <p>
